# simple_vector_db

./: .gitignore  README.md  main.py  main_evaluator.py  main_evaluator_pq.py  main_in_memory.py  main_quantizer.py  main_sqlite.py  main_sqlite_pq.py  pyproject.toml
.github/workflows/: static.yml
TP_instructions/: tp0.md  tp1.md  tp_simple_vector_db.md
notebooks/: 01_Product_quantization_bench.ipynb  01_generate_voronoi_cells_mnist.ipynb
simple_vector_db/: config.py  distances.py  numpy_array_adapter.py  vector_db.py  vector_db_in_memory.py  vector_db_sqlite.py  vector_db_sqlite_pq.py
simple_vector_db/evaluation/: evaluator.py  main_evaluator.py  main_evaluator_pq.py
simple_vector_db/quantization/: vector_quantizer.py
tests/: test_vector_db_sqlite.py  test_vectordb_sqlite.py
tests/evaluation/: test_evaluator.py
tests/quantization/: test_vector_quantizer.py
utils/: flex_logging.py  plotting.py  timing.py
